# mandelbrot

./: Cargo.toml  build.sh
docs/: index.html  index.js  mandelbrot.wasm  worker.js
src/: lib.rs
