[package]
name = "mandelbrot"
version = "0.1.0"
authors = ["Jiang Meng Liao <alexandre.liao@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.55"

[profile.release]
opt-level = 3